--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,6 +7,14 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>A site to score words.</p>
+    <img src = "/images/images.jpg" />
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+            <li id="home"><a href="/">Home</a></li>
+            <li id="score"><a href="/scrabble/score">Scorer</a></li>
+            <li id="score"><a href="/scrabble/chart">Tile Chart</a></li>
+        </ul>
+    </div>
   </body>
 </html>
